--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@
                 </div>
                 <div class="footer-links">
                     <ul>
-                        <li><a href="#about">About Us</a></li>
-                        <li><a href="#contact">Contact</a></li>
+                        <li><a id = "about_btn" href="#About" class="about-btn">About us</a></li>
+                        <li><a id = "contact_btn" href="#Contact" class="contact-btn">Contact</a></li>
                         <li><a href="#privacy">Privacy Policy</a></li>
                         <li><a href="#terms">Terms of Service</a></li>
                     </ul>
