--- a/AboutUs.html
+++ b/AboutUs.html
@@ -35,7 +35,7 @@
               Luccin is a passionate developer with a keen interest in web technologies. He enjoys creating seamless user experiences and is always eager to learn new things.
             </p>
             <p>
-              <a href="https://www.linkedin.com/in/luccin95" target="_blank"><img src="images/linkedin-logo.png" alt="Linked In Link"/></a> | <a href="mailto:luccin95@example.com"><img src="images/close-envelope.png" alt="email me" /></a>
+              <a href="https://www.linkedin.com/in/luccin95" target="_blank"><img class = "linkedin" src="images/linkedin-logo.png" alt="Linked In Link"/></a> | <a href="mailto:luccin95@example.com"><img class = "mail-img" src="images/close-envelope.png" alt="email me" /></a>
             </p>
           </div>
           <div class="clear-floats"></div>
@@ -51,7 +51,7 @@
               Brice is a software engineer with a strong background in backend development. He loves solving complex problems and optimizing system performance.
             </p>
             <p>
-              <a href="https://www.linkedin.com/in/brice404" target="_blank"><img src="images/linkedin-logo.png" alt="Linked In Link" /></a> | <a href="mailto:brice404@example.com"><img src="images/close-envelope.png" alt="email me" /></a>
+              <a href="https://www.linkedin.com/in/brice404" target="_blank"><img class = "linkedin" src="images/linkedin-logo.png" alt="Linked In Link" /></a> | <a href="mailto:brice404@example.com"><img class = "mail-img" src="images/close-envelope.png" alt="email me" /></a>
             </p>
           </div>
           <div class="clear-floats"></div>
@@ -67,7 +67,7 @@
               Aziz is a front-end developer who specializes in creating beautiful and responsive web designs. He has a great eye for detail and a passion for user interface design.
             </p>
             <p>
-              <a href="https://www.linkedin.com/in/mazi7327" target="_blank"><img src="images/linkedin-logo.png" alt="Linked In Link" /></a> | <a href="mailto:mazi7327@example.com"><img src="images/close-envelope.png" alt="email me" /></a>
+              <a href="https://www.linkedin.com/in/mazi7327" target="_blank"><img class =  "linkedin" src="images/linkedin-logo.png" alt="Linked In Link" /></a> | <a href="mailto:mazi7327@example.com"><img class = "mail-img" src="images/close-envelope.png" alt="email me" /></a>
             </p>
           </div>
           <div class="clear-floats"></div>
@@ -75,15 +75,15 @@
 
         <div class="team-member">
           <div class="photo">
-            <img src="images/tony.png" alt="Tony Yu" />
+            <img src="images/tony.jpg" alt="Tony Yu" />
           </div>
           <div class="writeup">
             <h1><a href="#" target="_blank">Tony Yu</a></h1>
             <p>
-              Tony is a full-stack developer with a knack for building scalable web applications. He enjoys working on both the front-end and back-end of projects.
+              Tony is a first year software engineering student. He enjoys working with both hardware and software, and he also enjoys interacting with clients to ensure satisfaction.
             </p>
             <p>
-              <a href="https://www.linkedin.com/in/tony-octopus" target="_blank"><img src="images/linkedin-logo.png" alt="Linked In Link" /></a> | <a href="mailto:tony-octopus@example.com"><img src="images/close-envelope.png" alt="email me" /></a>
+              <a href="www.linkedin.com/in/tony-yu-3b7604329" target="_blank"><img class = linkedin src="images/linkedin-logo.png" alt="Linked In Link" /></a> | <a href="mailto:tony-octopus@example.com"><img class = "mail-img" src="images/close-envelope.png" alt="email me" /></a>
             </p>
           </div>
           <div class="clear-floats"></div>
@@ -99,7 +99,7 @@
               Zackary is a software engineer with a focus on mobile development. He loves creating intuitive and engaging mobile applications for various platforms.
             </p>
             <p>
-              <a href="https://www.linkedin.com/in/zackary06" target="_blank"><img src="images/linkedin-logo.png" alt="Linked In Link" /></a> | <a href="mailto:zackary06@example.com"><img src="images/close-envelope.png" alt="email me" /></a>
+              <a href="https://www.linkedin.com/in/zackary06" target="_blank"><img class = linkedin src="images/linkedin-logo.png" alt="Linked In Link" /></a> | <a href="mailto:zackary06@example.com"><img class = "mail-img" src="images/close-envelope.png" alt="email me" /></a>
             </p>
           </div>
           <div class="clear-floats"></div>
@@ -115,7 +115,7 @@
               Guershom is a data scientist with expertise in machine learning and data analysis. He enjoys turning data into actionable insights and building predictive models.
             </p>
             <p>
-              <a href="https://www.linkedin.com/in/biggshom" target="_blank"><img src="images/linkedin-logo.png" alt="Linked In Link" /></a> | <a href="mailto:biggshom@example.com"><img src="images/close-envelope.png" alt="email me" /></a>
+              <a href="https://www.linkedin.com/in/biggshom" target="_blank"><img class = linkedin src="images/linkedin-logo.png" alt="Linked In Link" /></a> | <a href="mailto:biggshom@example.com"><img class = "mail-img" src="images/close-envelope.png" alt="email me" /></a>
             </p>
           </div>
           <div class="clear-floats"></div>
