--- a/AboutUs.html
+++ b/AboutUs.html
@@ -9,16 +9,9 @@
       <div class="container">
         <div class="logo">
           <a href="index.html">
-            <img src="images/logo_white.png" />
+            <img src="images/Logo for LeapTrip.jpg" />
           </a>
         </div>
-
-        <div class="navigation">
-          <a href="features.html">FEATURES</a>
-          <a href="pricing.html">PRICING</a>
-          <a href="team.html">TEAM</a>
-        </div>
-
         <div class="clear-floats"></div>
       </div>
     </div>
