--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <header>
             <nav>
                 <div class="logo">
-                    <img src="https://imagedelivery.net/xMnwd1aoy-PQ8Klk2JdGdw/1f3d2253-f730-4c58-9d7f-73f98aeae900/public" alt="LeapTrip logo with a stylized globe icon" width="40" height="40">
+                    <img src="images/Logo for LeapTrip.jpg" alt="LeapTrip logo with a stylized globe icon" width="40" height="40">
                     LeapTrip
                 </div>
                 <ul class="nav-links">
