--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         <footer>
             <div class="footer-content">
                 <div class="footer-logo">
-                    <img src="https://imagedelivery.net/xMnwd1aoy-PQ8Klk2JdGdw/3e12c984-6bf6-4917-4050-346347129000/public" alt="LeapTrip logo" width="40" height="40">
+                    <img src="images/Logo for LeapTrip.jpg" alt="LeapTrip logo" width="40" height="40">
                     LeapTrip
                 </div>
                 <div class="footer-links">
