--- a/AboutUs.html
+++ b/AboutUs.html
@@ -27,7 +27,7 @@
       <div class="container">
         <div class="team-member">
           <div class="photo">
-            <img src="images/luccin.png" alt="Luccin Mutabazi" />
+            <img src="images/Luccin.jpg" alt="Luccin Mutabazi" />
           </div>
           <div class="writeup">
             <h1><a href="#" target="_blank">Luccin Mutabazi</a></h1>
