--- a/AboutUs.html
+++ b/AboutUs.html
@@ -84,7 +84,7 @@
 
         <div class="team-member">
           <div class="photo">
-            <img src="images/zackary.png" alt="Zackary Hamwi" />
+            <img src="images/Zack about us.jpg" alt="Zackary Hamwi" />
           </div>
           <div class="writeup">
             <h1><a href="#" target="_blank">Zackary Hamwi</a></h1>
