--- a/AboutUs.html
+++ b/AboutUs.html
@@ -43,7 +43,7 @@
 
         <div class="team-member">
           <div class="photo">
-            <img src="images/brice.png" alt="Brice Foumane" />
+            <img src="images/Brice.jpg" alt="Brice Foumane" />
           </div>
           <div class="writeup">
             <h1><a href="#" target="_blank">Brice Foumane</a></h1>
