--- a/AboutUs.html
+++ b/AboutUs.html
@@ -100,7 +100,7 @@
 
         <div class="team-member">
           <div class="photo">
-            <img src="images/guershom.png" alt="Guershom Ngombe" />
+            <img src="images/Guershom.jpg" alt="Guershom Ngombe" />
           </div>
           <div class="writeup">
             <h1><a href="#" target="_blank">Guershom Ngombe</a></h1>
