--- a/AboutUs.html
+++ b/AboutUs.html
@@ -52,7 +52,7 @@
 
         <div class="team-member">
           <div class="photo">
-            <img src="images/aziz.png" alt="Muhammad Aziz Haydar" />
+            <img src="images/Stickman.jpg" alt="Muhammad Aziz Haydar" />
           </div>
           <div class="writeup">
             <h1><a href="#" target="_blank">Muhammad Aziz Haydar</a></h1>
